--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
     
 }
 
-div{
-    position: absolute;
-    margin-top: 100px;
-    margin-left: 300px;
-
+div {
+  position: absolute;
+  top: 30%;
+  left: 40%;
 }
